--- a/css/main.css
+++ b/css/main.css
@@ -12,16 +12,26 @@ body {
   background-size: cover;
   color: #fff;
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-family: "Raleway", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif; }
 
 .heading {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
   padding-bottom: 12px;
   margin: 30px 0 100px;
   letter-spacing: 2px;
   position: relative;
   display: inline-block; }
+  .heading::before, .heading::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /*background-color: white;*/
+    border-bottom: 1px solid white; }
+  .heading::after {
+    bottom: 5px; }
 
 .header {
   padding: 170px 30px 80px; }
@@ -40,8 +50,15 @@ body {
   .header .site-title {
     font-size: 4rem;
     margin: 40px auto 0; }
+  .header .my-profile-pic {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background: url("./../images/icon-pic.jpg");
+    background-size: cover;
+    margin: 30px auto 0; }
   .header .buttons {
-    margin: 40px auto 50px; }
+    margin: 20px auto 50px; }
     .header .buttons .button {
       text-decoration: none;
       display: inline-block;
@@ -53,7 +70,7 @@ body {
       padding: 20px;
       margin: 10px;
       letter-spacing: 1px;
-      font-size: 1rem;
+      font-size: 1.2rem;
       text-align: 50px; }
       .header .buttons .button:hover {
         opacity: 0.9; }
@@ -63,24 +80,43 @@ body {
 .about {
   padding: 50px 30px;
   background-color: black; }
-  .about .heading::before, .about .heading::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    /*background-color: white;*/
-    border-bottom: 1px solid white; }
-  .about .heading::after {
-    bottom: 5px; }
   .about .about-text {
-    margin: 0 230px 50px;
-    line-height: 2.5; }
-
-.works {
-  padding: 50px 30px; }
-  .works .works-text {
     margin: 0 230px 50px; }
+    .about .about-text p {
+      line-height: 2.5; }
+
+.story {
+  padding: 50px 30px; }
+  .story .timeline {
+    width: 60%;
+    margin: 0 auto 50px;
+    list-style: none; }
+    .story .timeline > li {
+      overflow: hidden;
+      margin: 0 0 0 60px;
+      position: relative; }
+    .story .timeline .timeline-date {
+      width: 110px;
+      float: left;
+      margin-top: 20px; }
+    .story .timeline .timeline-content {
+      width: 75%;
+      height: 120px;
+      float: left;
+      border-left: 3px white solid;
+      padding-left: 30px;
+      line-height: 1.5; }
+      .story .timeline .timeline-content h5 {
+        margin-bottom: 10px; }
+    .story .timeline .timeline-content:before {
+      content: "";
+      width: 12px;
+      height: 12px;
+      background: #f3f94d;
+      position: absolute;
+      left: 106px;
+      top: 24px;
+      border-radius: 100%; }
 
 .skills {
   padding: 50px 30px;
@@ -90,9 +126,20 @@ body {
     letter-spacing: 1px; }
 
 .footer {
+  width: 100%;
+  height: 160px;
   font-size: 1rem;
   padding: 20px;
-  color: rgba(255, 255, 255, 0.6); }
+  color: rgba(255, 255, 255, 0.6);
+  background: gray;
+  opacity: 0.4;
+  position: relative; }
+  .footer p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%); }
 
 @media (max-width: 768px) {
   .site-title-sub::before,
