--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,17 +15,32 @@ body {
   background-size: cover;
   color: #fff;
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-family: "Raleway", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 }
 
 .heading {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
   padding-bottom: 12px;
   margin: 30px 0 100px;
   letter-spacing: 2px;
   position: relative;
   display: inline-block;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /*background-color: white;*/
+    border-bottom: 1px solid white;
+  }
+
+  &::after {
+    bottom: 5px;
+  }
 }
 
 .header {
@@ -50,8 +65,17 @@ body {
     margin: 40px auto 0;
   }
 
+  .my-profile-pic {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background: url("./../images/icon-pic.jpg");
+    background-size: cover;
+    margin: 30px auto 0;
+  }
+
   .buttons {
-    margin: 40px auto 50px;
+    margin: 20px auto 50px;
     .button {
       text-decoration: none;
       display: inline-block;
@@ -63,7 +87,7 @@ body {
       padding: 20px;
       margin: 10px;
       letter-spacing: 1px;
-      font-size: 1rem;
+      font-size: 1.2rem;
       text-align: 50px;
 
       &:hover {
@@ -80,33 +104,53 @@ body {
   padding: 50px 30px;
   background-color: black;
 
-  .heading {
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      /*background-color: white;*/
-      border-bottom: 1px solid white;
-    }
-
-    &::after {
-      bottom: 5px;
-    }
-  }
-
   .about-text {
     margin: 0 230px 50px;
-    line-height: 2.5;
+    p {
+      line-height: 2.5;
+    }
   }
 }
 
-.works {
+.story {
   padding: 50px 30px;
-  .works-text {
-    margin: 0 230px 50px;
+  .timeline {
+    width: 60%;
+    margin: 0 auto 50px;
+    list-style: none;
+
+    & > li {
+      overflow: hidden;
+      margin: 0 0 0 60px;
+      position: relative;
+    }
+
+    .timeline-date {
+      width: 110px;
+      float: left;
+      margin-top: 20px;
+    }
+    .timeline-content {
+      width: 75%;
+      height: 120px;
+      float: left;
+      border-left: 3px white solid;
+      padding-left: 30px;
+      line-height: 1.5;
+      h5 {
+        margin-bottom: 10px;
+      }
+    }
+    .timeline-content:before {
+      content: "";
+      width: 12px;
+      height: 12px;
+      background: #f3f94d;
+      position: absolute;
+      left: 106px;
+      top: 24px;
+      border-radius: 100%;
+    }
   }
 }
 
@@ -120,9 +164,22 @@ body {
 }
 
 .footer {
+  width: 100%;
+  height: 160px;
   font-size: 1rem;
   padding: 20px;
   color: rgba(255, 255, 255, 0.6);
+  background: gray;
+  opacity: 0.4;
+  position: relative;
+
+  p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
+  }
 }
 
 @media (max-width: 768px) {
