--- a/scss/top.scss
+++ b/scss/top.scss
@@ -25,7 +25,7 @@ body {
 header {
   .logo {
     a {
-      font-size: 32px;
+      font-size: 2rem;
       text-decoration: none;
       color: white;
     }
@@ -45,12 +45,12 @@ section {
       width: 50%;
       color: white;
       h2 {
-        font-size: 24px;
         margin-bottom: 20px;
+        font-size: 2.4rem;
       }
       p {
-        font-size: 16px;
         line-height: 1.5;
+        font-size: 1.8rem;
       }
     }
 
@@ -71,12 +71,12 @@ section {
           width: 200px;
           height: 50px;
           color: white;
-          background-color: #ff4de1;
+          background-color: #4dd4ff;
           border-radius: 5px;
           padding: 20px;
           margin: 10px;
           letter-spacing: 1px;
-          font-size: 1.6rem;
+          font-size: 1.2rem;
         }
       }
 
