--- a/scss/top.scss
+++ b/scss/top.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   background-color: #1e0731;
+  font-family: "Raleway", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 }
 
 .wrapper {
