--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@ html {
   height: 100%; }
 
 body {
-  background-color: #1e0731; }
+  background-color: #1e0731;
+  font-family: "Raleway", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif; }
 
 .wrapper {
   position: absolute;
